--- a/style.css
+++ b/style.css
@@ -16,25 +16,40 @@ body{
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%); /*centralizando conteúdo por completo*/
-    background-color: black;
+    background-color: rgba(0, 0, 0, 0.9);
     padding: 16px;
     border-radius: 25px;
     text-align: center;
 }
 #resultado {
-    width: 271px;
-    height: 40px;
+    width: 262px;
+    height: 45px;
     background-color: white;
     border: none;
+    margin-bottom: 8px;
+    border-radius: 5px;
 }
 .calculator table {
     width: 275px;
     height: 330px;
 }
-.calculator table tr td{
-    background-color: white;
-    padding: 14px 20px;
-    margin-left: 10px;
-    color: black;
+.calculator .btn {
+    width: 60px;
+    height: 58px;
+    font-size: 30px;
+    color: white;
+    background-color: rgb(31, 31, 31);
+    cursor: pointer;
+    border: none;
+    border-radius: 5px;
+}
+.calculator .btn:hover {
+    background-color: black;
+}
+#btn0 {
+    width: 126px;
+}
+#btnIgual{
+    height: 126px;
 }
     
